2003-01-24  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/bh.c backend/coolscan.c: Minor conversion fixes (from
	  Andrea Suatoni <a.suatoni@telefonica.net>).
	* backend/test.c: Use "Color pattern" consistantly.

2003-01-24  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/plustek/Plustek-USB-TODO.txt
	  doc/plustek/Plustek-USB.txt
	  Documentation update
	* doc/descriptions/plustek.desc: status updates
	* backend/plustek.conf fixed options
	* backend/plustek.c backend/plustek-devs.c backend/plustek-usb.c
	  backend/plustek-usbhw.c backend/plustek-usbimg.c
	  backend/plustek-usbscan.c backend/plustek-usbshading.c
	  backend/plustek.h backend/plustek-usb.h
	  Minor fixes and prototype description updates, code cleanup

2003-01-23  Karl Heinz Kremer <khk@khk.net>

	* doc/descriptions/epson.desc: Added Perfection 3200/GT-9800

2003-01-23  Andras Major <andras@users.sourceforge.net>

	* backend/doc/sane-coolscan2.man: added a .TP that mysteriously
	  vanished

2003-01-23  Andras Major <andras@users.sourceforge.net>

	* backend/coolscan2.c: hack for IR readout with LS-4000.

2003-01-23  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Primax/Visioneer Primascan
	  Colorado 2600u and UMAX Astra 4500.

2003-01-22  Karl Heinz Kremer <khk@khk.net>

	* doc/descriptions/epson.desc: Corrected syntax for GT-6000 entry

2003-01-22  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* sanei/Makefile.in: Fixed regeneration of libsanei.a when the object
	  files were changed.
	* sanei/sanei_usb.c: Scanning for devices is now done in
	  sanei_usb_init instead of every time when sanei_usb_find_devices is
	  called. Also only devices that really exist are opened. These
	  changes fixe the slow detection of devices on systems using devfs or
	  old scanner drivers.

2003-01-21  Karl Heinz Kremer <khk@khk.net>

	* doc/descriptions/epson.desc: Added "SCSI" to GT-6000 entry

2003-01-21  Eddy De Greef <eddy_de_greef at tiscali dot be>
